--- a/hello.html
+++ b/hello.html
@@ -16,6 +16,8 @@
 		<div id="top-banner">
 			Bienvenue dans cette formation GIT !
 		</div> 
-		
+		<div>
+			<p>je suis le meulleur developpeur web et mobile au monde</p>
+		</div>
 	
 </body></html>
