--- a/hello.html
+++ b/hello.html
@@ -26,5 +26,13 @@
 			<h1>Mes récompenses</h1>
 			<p>en construction...</p>
 		</div>
+
+		<!-- mon gist -->
+
+		<div>
+			<h1>Mon Gist</h1>
+			  <script src="https://gist.github.com/BCMID14/82415b4abad0f1bcb11c65a584b4eb24.js"></script>
+		</div>
+
 	
 </body></html>
