#2: ajout images et recompenses

--- a/hello.html
+++ b/hello.html
@@ -24,7 +24,7 @@
 		<!-- recompense -->
 		<div>
 			<h1>Mes récompenses</h1>
-			<p>en construction...</p>
+			<img src="images/medal_bronze.png" alt="">
 		</div>
 
 		<!-- mon gist -->
